--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 
 <div class="section" id="contact">
   <h2>Contact Us</h2>
-  <p><strong>Address:</strong> New Generation High School, Your City, India</p>
-  <p><strong>Phone:</strong> +91 XXXXX XXXXX</p>
-  <p><strong>Email:</strong> info@newgenerationhs.in</p>
+  <p><strong>Address:</strong> New Generation High School, Chaitanya Nagar,Miryalaguda. </p>
+  <p><strong>Phone:</strong> +91 8801559549 </p>
+  <p><strong>Email:</strong> newgeneration@gmail.com</p>
 </div>
 
 <footer>
