--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="description" content="Official website of New Generation High School, Chaitanya Nagar, Miryalaguda. Providing quality education with discipline and modern teaching methods.">
+<meta name="keywords" content="New Generation High School Miryalaguda, New Generation School Chaitanya Nagar, school in Miryalaguda"> 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,7 +24,7 @@
 
 <header>
   <h1>NEW GENERATION HIGH SCHOOL</h1>
-  <p>Inspiring Young Minds for a Better Future</p>
+  <p> Chaitanya Nagar, Miryalaguda</p>
 </header>
 
 <nav>
